services/echo-ci-cd/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-ci-cd--production
spec:
  selector:
    matchLabels:
      app: echo-ci-cd--production
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-ci-cd--production
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      containers:
      - name: echo-ci-cd--production
        image: efishery.azurecr.io/echo-ci-cd--production:23
        ports:
        - containerPort: 8080
