services/echo-ci-cd/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-ci-cd--production
  name: echo-ci-cd--production
  namespace: production
spec:
  selector:
    app: echo-ci-cd--production
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
